--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="css/style.css">
-    <title>fdfsdfs</title>
-  </head>
-  <body>
-    <header>
 
-    </header>
-    <main>
+<head>
+  <link rel="stylesheet" href="css/style.css">
+  <title>SMACSS</title>
+</head>
 
-    </main>
-    <footer>
+<body>
+  <header>
+<p>A</p>
+  </header>
+  <main>
+    <section>
+<p>B</p>
+    </section>
+    <section>
+<p>C</p>
+    </section>
+    <section>
+<p>D</p>
+    </section>
+  </main>
+  <section>
+<p>E</p>
+  </section>
+  <section>
+<p>F</p>
+  </section>
+  <section>
+<p>G</p>
+  </section>
+  <section>
+<p>H</p>
+  </section>
 
-    </footer>
-  </body>
+  <footer>
+<p>I</p>
+  </footer>
+</body>
+
 </html>
