--- a/index.html
+++ b/index.html
@@ -8,34 +8,44 @@
 
 <body>
   <header>
-<p>A</p>
+    <p>A</p>
   </header>
+
   <main>
-    <section>
-<p>B</p>
-    </section>
-    <section>
-<p>C</p>
-    </section>
-    <section>
-<p>D</p>
-    </section>
+    <div id="b">
+      <p>B</p>
+    </div>
+
+    <div>
+      <p>C</p>
+    </div>
+
+    <div>
+      <p>D</p>
+    </div>
+
   </main>
   <section>
-<p>E</p>
-  </section>
-  <section>
-<p>F</p>
-  </section>
-  <section>
-<p>G</p>
-  </section>
-  <section>
-<p>H</p>
+    <div>
+      <p>E</p>
+    </div>
+
+    <div>
+      <p>F</p>
+    </div>
+
+    <div>
+      <p>G</p>
+    </div>
+
+    <div>
+      <p>H</p>
+    </div>
+
   </section>
 
   <footer>
-<p>I</p>
+    <p>I</p>
   </footer>
 </body>
 
